[package]
name = "zhixya"
version = "0.1.0"
edition = "2021"
description = "A format written in Rust for loading 2D levels in games programmatically and visually."
license = "MIT"
license-file = "LICENSE"
authors = ["Pedro Henrique <eu@peedro.xyz>"]
keywords = ["bevy", "game", "level", "map"]
homepage = "https://git.exst.fun/zhixya"
exclude = ["assets/**/*", "tools/**/*", ".github/**/*"]
publish = false

[workspace]
resolver = "2"
members = ["./crates/zhixya-format", "./crates/zhixya-bevy-engine", "./tools/lint"]
